# prism

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  feedback_kb.py  harness.py  llm_clients.py  main.py  models.py  race.py  spec.py  storage.py  trace_export.py
backend/app/agents/: __init__.py  base.py  gemini.py  gpt.py  judge.py  opus.py  shared_prompt.py
backend/app/tools/: __init__.py  _http.py  base.py  grabmaps.py  live.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_endpoints_and_tools.py  test_harness.py  test_storage.py
backend/tests/fixtures/: api_discovery_20260424.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: explore-shell.tsx  globals.css  layout.tsx  page.tsx
frontend/app/admin/: admin-view.tsx  page.tsx
frontend/app/new/: new-route-shell.tsx  page.tsx
frontend/components/: agent-race-panel.tsx  agent-stream-overlay.tsx  feedback-drawer.tsx  feedback-pulse-panel.tsx  globe-intro.tsx  globe.tsx  hitl-rating.tsx  incident-layer.tsx  live-canvas.tsx  live-feed-panel.tsx  nav.tsx  past-races-list.tsx  plan-card.tsx  plan-detail.tsx  sparkline.tsx  street-view-gallery.tsx  structured-race-form.tsx  top-routes-list.tsx  traffic-layer.tsx  word-reveal.tsx
frontend/lib/: api-client.ts  types.ts
